# binance_data_saver

./: .gitignore  .pylintrc  README.md  mypy.ini  pyproject.toml  run_data_saving.sh
binance_data_saver/: config.yaml  data_objects.py  main.py  manage_ws_depth.py  parquet_saver.py  pydantic_test.py  sample_data.json
binance_data_saver/data/: test_data.ipynb
